--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   --page-2-color: tan;
   --page-3-color: teal;
   --page-4-color: slateblue;
-  --animate-speed: 1s;
+  --animate-speed: 2s;
 }
 
 body {
@@ -70,4 +70,17 @@ body {
 .btn-dark:hover {
   background: #fff;
   color: #333;
+}
+
+/* Page Animation */
+#page-1 h1 {
+  transform: translateY(-100vw);
+  animation: heading var(--animate-speed) forwards ease-in;
+}
+
+/* Keyframes */
+@keyframes heading {
+  to {
+    transform: translateY(0);
+  }
 }
