--- a/css/style.css
+++ b/css/style.css
@@ -74,13 +74,24 @@ body {
 
 /* Page Animation */
 #page-1 h1 {
-  transform: translateY(-100vw);
+  transform: translateY(-100vh);
   animation: heading var(--animate-speed) forwards ease-in;
+}
+
+#page-1 p {
+  transform: translateX(-100vw);
+  animation: text var(--animate-speed) forwards ease-in 1s;
 }
 
 /* Keyframes */
 @keyframes heading {
   to {
     transform: translateY(0);
+  }
+}
+
+@keyframes text {
+  to {
+    transform: translateX(0);
   }
 }
